--- a/onlineblog.htm
+++ b/onlineblog.htm
@@ -1,6 +1,6 @@
 <html>
 <body style="background-color:#8FBC8F; font-family: verdana;">
-<a href="https://www.w3schools.com">Dumbass this is the way to the homepage.</a>
+<a href="https://therealtrooper.github.io/Trooper-s-site/">Dumbass this is the way to the homepage.</a>
 <center><h1>Welcome to the movies page</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
 <center>
