--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,8 @@
 <html>
 <body style="background-color:#8FBC8F; font-family: verdana;">
 <a href="https://therealtrooper.github.io/Trooper-s-site/">Dumbass this is the way to the homepage.</a>
-<center><h1>Welcome to the movies page</h1>
+  <center><h1>Welcome</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
-<center>
 <h1>Welcome</h1>
 <p>This is were I write my thoughts, were I think about things in life. Thinks I like and things I hate. Why the way things are. Im just kidding this is were I think about crap in my life that has no real meaning. Sometimes.</p>
 <h2>June 11, 2023</h2>
