--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
   <center><h1>Welcome</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
 <h1>Welcome</h1>
-<p>This is were I write my thoughts, were I think about things in life. Thinks I like and things I hate. Why the way things are. Im just kidding this is were I think about crap in my life that has no real meaning. Sometimes.</p>
+<p>This is were I write my thoughts, where I think about things in life. Things I like and things I hate. Why the way things are. Im just kidding this is were I think about crap in my life that has no real meaning. Sometimes.</p>
 <h2>June 11, 2023</h2>
 <p>Today is sunday and today is another day on summer break, this will be the first entry on this page. I hope all my friends can see this page. At the time of me writing or typing this the music page is still yet to be done for this website. Or, idk. I dont know if I will add that page. You know what I am not going to just sit ariund and make empty promises! I will fullfill this request of my past self! I am going to go and make the page right now. Have fun on the website! :)</p>
 </body>
