--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <h2>June 11, 2023</h2>
 <p>Today is sunday and today is another day on summer break, this will be the first entry on this page. I hope all my friends can see this page. At the time of me writing or typing this the music page is still yet to be done for this website. Or, idk. I dont know if I will add that page. You know what I am not going to just sit ariund and make empty promises! I will fullfill this request of my past self! I am going to go and make the page right now. Have fun on the website! :)</p>
     <br></br>
-  </h1>June 12, 2023</h1>
+  <h1>June 12, 2023</h1>
 <p>Well Im done with the site, not I should make some movies to put on it. At 4:30 I am going to have my braces checked. I hope they just leave them as when they move the wires around it can really hurt. Im going to go see 
   who is on the gmod server Atomic. Goodbye for know!</p>
     
