--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
   who is on the gmod server Atomic. Goodbye for now!</p>
   <br></br>
   <h1>June 13, 2023</h1>
-  <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
+  <img src="trooperxsteak.gif" alt="lots of cool thoughts!" width="300" height="415">
   <p>Today has been fine, I am getting a pet rock. Just for fun something I can rant at. It even comes with a booklet on how to take care of it. I wonder if every image is just the same rock, that would be funny. It is
     going to arrive in a couple of days. And tomorrow we are going to have steak to eat for dinner. I love steak!</p>
     
