--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,10 @@
 <h1>June 14, 2023</h1>
 <p>Tonight we are having steak and god I hope this will be the best ever. And I am re playing a half life mod called they hunger, its good. I may make a video about it on my youtube channel.
 The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturday or Sunday I forgot is fathers day. My dad is a good dad! I should make a website deticated to him.</p>
-    
+<br></br>
+<h1>June 15, 2023</h1>
+<p>Ok sorry about that blog yesterday. It was Wednesday not Thursday. Sorry. And the steak was the best thing I have eaten since last steak night. The rock is coming on Tuesday still and I cant wait. Im going to make a website for 
+  father's day.</p>
     
     </body>
 </html>
