--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,9 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
 <h1>June 15, 2023</h1>
 <p>Ok sorry about that blog yesterday. It was Wednesday not Thursday. Sorry. And the steak was the best thing I have eaten since last steak night. The rock is coming on Tuesday still and I cant wait. Im going to make a website for 
   father's day.</p>
+    <br></br>
+<h1>June 19, 2023</h1>
+    <p>I have not been on the blog for a few days because I went to the grand canyon. I got some images ill put up on here sometime, not right now. Also I put a new movie but it is not showing up, idk.</p>
     
     </body>
 </html>
