added anothe rpost

--- a/index.htm
+++ b/index.htm
@@ -4,12 +4,12 @@
   <center><h1>Welcome</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
 <h1>Welcome</h1>
-<p>This is where I write my thoughts and think about things in life. Things I like and things I hate. Why the way things are. Im just kidding this is were I think about crap in my life that has no real meaning. Sometimes.</p>
+<p>This is where I write my thoughts and think about things in life. Things I like and things I hate. Why the way things are? Im just kidding this is where I think about crap in my life that has no real meaning. Sometimes.</p>
 <h2>June 11, 2023</h2>
 <p>Today is Sunday and today is another day of summer break, this will be the first entry on this page. I hope all my friends can see this page. At the time of me writing or typing this the music page is still yet to be done for this website. Or, idk. I dont know if I will add that page. You know what I am not going to just sit ariund and make empty promises! I will fullfill this request of my past self! I am going to go and make the page right now. Have fun on the website! :)</p>
     <br></br>
   <h1>June 12, 2023</h1>
-<p>Well Im done with the site, not I should make some movies to put on it. At 4:30 I am going to have my braces checked. I hope they just leave them as when they move the wires around it can really hurt. Im going to go see 
+<p>Well Im done with the site, not I should make some movies to put on it. At 4:30 I am going to have my braces checked. I hope they just leave them as when they move the wires around it can really hurt. I'm going to go see 
   who is on the gmod server Atomic. Goodbye for now!</p>
   <br></br>
   <h1>June 13, 2023</h1>
@@ -18,15 +18,21 @@
     going to arrive in a couple of days. And tomorrow we are going to have steak to eat for dinner. I love steak!</p>
   <br></br>
 <h1>June 14, 2023</h1>
-<p>Tonight we are having steak and god I hope this will be the best ever. And I am re playing a half life mod called they hunger, its good. I may make a video about it on my youtube channel.
-The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturday or Sunday I forgot is fathers day. My dad is a good dad! I should make a website deticated to him.</p>
+<p>Tonight we are having steak and god I hope this will be the best ever. And I am replaying a half-life mod called they hunger, it's good. I may make a video about it on my youtube channel.
+The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturday or Sunday I forgot is fathers Day. My dad is a good dad! I should make a website dedicated to him.</p>
 <br></br>
 <h1>June 15, 2023</h1>
-<p>Ok sorry about that blog yesterday. It was Wednesday not Thursday. Sorry. And the steak was the best thing I have eaten since last steak night. The rock is coming on Tuesday still and I cant wait. Im going to make a website for 
-  father's day.</p>
+<p>Ok sorry about that blog yesterday. It was Wednesday not Thursday. Sorry. And the steak was the best thing I have eaten since last steak night. The rock is coming on Tuesday still and I can't wait. I'm going to make a website for 
+  Father's Day.</p>
     <br></br>
 <h1>June 19, 2023</h1>
-    <p>I have not been on the blog for a few days because I went to the grand canyon. I got some images ill put up on here sometime, not right now. Also I put a new movie but it is not showing up, idk.</p>
+    <p>I have not been on the blog for a few days because I went to the grand canyon. I got some images ill put up here sometime, but not right now. Also, I put a new movie but it is not showing up, idk.</p>
+    <br></br>
+<h1>June 24, 2023 </h1>
+    <p>Damn it has been a long time since I posted here. I am just changing some of the grammar on this blog. I am thinking of doing a half-life mod business. Like it could cost 5 bucks for me to make a half-life mod.
+    Like a simple reskin, like ten maps, and instructions on installing and running it. That sounds good.</p>
     
-    </body>
+
+
+</body>
 </html>
