--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <html>
 <body style="background-color:#8FBC8F; font-family: verdana;">
-<a href="https://therealtrooper.github.io/Trooper-s-site/">Dumbass this is the way to the homepage.</a>
+<title>Trooper's Blog.</title>
+  <a href="https://therealtrooper.github.io/Trooper-s-site/">Dumbass this is the way to the homepage.</a>
   <center><h1>Welcome</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
 <h1>Welcome</h1>
@@ -31,6 +32,8 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
 <h1>June 24, 2023 </h1>
     <p>Damn it has been a long time since I posted here. I am just changing some of the grammar on this blog. I am thinking of doing a half-life mod business. Like it could cost 5 bucks for me to make a half-life mod.
     Like a simple reskin, like ten maps, and instructions on installing and running it. That sounds good.</p>
+    <br></br>
+    
     
 
 
