--- a/index.htm
+++ b/index.htm
@@ -52,6 +52,8 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     </details>
       <h6>Click the little arrow.</h6>
     <br></br>
+    <h1>June 27, 2023</h1>
+    <p>I missed a could of days of the blog but thats fine, Im going to make a website for my sister and I am thinking of giving her my old pc. But there is no wher ein her room to put it.</p>
     
     
 
