--- a/index.htm
+++ b/index.htm
@@ -38,6 +38,7 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     <details>
       <summary>Why I hate furries.</summary>
       This is a long text about why I hate furries.
+      
       Every furry that I have ment I hated, people at school and
       another kid. Now the other kid I will call MR.Dumbass for this story.
       I was at a sleep over with my friends and becuase MR.Dumbass is a friend of my friends he
@@ -57,7 +58,9 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     <br></br>
     <h1>June 28, 2023</h1>
     <p>Another day, im making another video and I will be adding somethings to the website service.</p>
-    
+    <br></br>
+    <h1>July 1, 2023</h1>
+    <p>Im going to take a break from posting to work on my kool kid network site. Ill be back when school starts, soooooooooooooo bye!</p>
 
 
 </body>
