--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
       I could not breath, this was the first time I got choked by someone. So my throat hurts for the rest of the night.
       THE END.
 
-      Oh calm down I also have another thing to talk about. Every flippin furry I see on th internet is a Dumbass. They are jsut 
+      Oh calm down I also have another thing to talk about. Every flippin furry I see on th internet is a Dumbass. They are just 
       weird. Some can't even reason with life. They also suck.
     </details>
       <h6>Click the little arrow.</h6>
@@ -61,7 +61,9 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     <br></br>
     <h1>July 1, 2023</h1>
     <p>Im going to take a break from posting to work on my kool kid network site. Ill be back when school starts, soooooooooooooo bye!</p>
-
-
+<br></br>
+    <h1>July 4, 2023</h1>
+    <p>Ok ok, I know school has not started but its the fourth of July! God bless America. I made another site for school called Troopers Troops, its were me and my friends can do pranks for money, or make video game maps. You can go to it</p>
+<a href="https://koolcoder123.github.io/TheTroopers-site/">here.</a>
 </body>
 </html>
