--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     <p>Ok ok, I know school has not started but its the fourth of July! God bless America. I made another site for school called Troopers Troops, its were me and my friends can do pranks for money, or make video game maps. You can go to it</p>
 <a href="https://koolcoder123.github.io/TheTroopers-site/">here.</a>
 <br></br>
-    <h1>July 5,2023</h1>
+    <h1>July 5, 2023</h1>
 <p>Today I learned how to make Doom Wads, you can find it on the site that I made yesterday. Just a small map, my very first!</p>
 
 
