--- a/index.htm
+++ b/index.htm
@@ -68,6 +68,9 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
 <br></br>
     <h1>July 5, 2023</h1>
 <p>Today I learned how to make Doom Wads, you can find it on the site that I made yesterday. Just a small map, my very first!</p>
+    <br></br>
+    <h1>July 7, 2023</h1>
+    <p>I have not made a youtube video in a little, I think ill do that today.</p>
 
 
 
