--- a/index.htm
+++ b/index.htm
@@ -71,9 +71,9 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     <br></br>
     <h1>July 7, 2023</h1>
     <p>I have not made a youtube video in a little, I think ill do that today.</p>
-
-
-
+    <br></br>
+    <h1>July 10, 2023</h1>
+    <P>My DOOM wads blew up! So many comments and views! That was epic!</P>
 
 </body>
 </html>
