--- a/index.htm
+++ b/index.htm
@@ -74,6 +74,8 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     <br></br>
     <h1>July 10, 2023</h1>
     <P>My DOOM wads blew up! So many comments and views! That was epic!</P>
-
+    <br></br>
+    <h1>July 15, 2023</h1>
+<p>I started taking pictures of things. I might even make a photos section, I'm working on it!</p>
 </body>
 </html>
