--- a/index.htm
+++ b/index.htm
@@ -77,5 +77,10 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
     <br></br>
     <h1>July 15, 2023</h1>
 <p>I started taking pictures of things. I might even make a photos section, I'm working on it!</p>
+<br></br>
+<h1>July 16, 2023</h1>
+    <p>The picture page is almost done! And a news website I'm making is also almost done!</p>
+
+  </center>
 </body>
 </html>
