--- a/index.htm
+++ b/index.htm
@@ -80,7 +80,9 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
 <br></br>
 <h1>July 16, 2023</h1>
     <p>The picture page is almost done! And a news website I'm making is also almost done!</p>
-
+<br></br>
+    <h1>July 17, 2023</h1>
+    <p>The pictures page is done! Im going to add a gallery for my other pages. I got a LOT of pictures.</p>
   </center>
 </body>
 </html>
