--- a/index.htm
+++ b/index.htm
@@ -83,6 +83,10 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
 <br></br>
     <h1>July 17, 2023</h1>
     <p>The pictures page is done! Im going to add a gallery for my other pages. I got a LOT of pictures.</p>
+  <br></br>
+    <h1>July 22, 2023</h1>
+    <p>I had been grounded, thats the reason why I have not been here. TF2 got a new update! Hell yeah.</p>
+  
   </center>
 </body>
 </html>
