--- a/index.htm
+++ b/index.htm
@@ -86,7 +86,9 @@ The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturd
   <br></br>
     <h1>July 22, 2023</h1>
     <p>I had been grounded, thats the reason why I have not been here. TF2 got a new update! Hell yeah.</p>
-  
+  <br></br>
+    <h1>July 27, 2023</h1>
+  <p>Three more days till school! Meet the teacher happened. The 7th grade teachers are nice. Soooo yeah!1!1!! Can't wait!</p>
   </center>
 </body>
 </html>
