--- a/index.htm
+++ b/index.htm
@@ -4,91 +4,9 @@
   <a href="https://therealtrooper.github.io/Trooper-s-site/">Dumbass this is the way to the homepage.</a>
   <center><h1>Welcome</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
-<h1>Welcome</h1>
-<p>This is where I write my thoughts and think about things in life. Things I like and things I hate. Why the way things are? Im just kidding this is where I think about crap in my life that has no real meaning. Sometimes.</p>
-<h2>June 11, 2023</h2>
-<p>Today is Sunday and today is another day of summer break, this will be the first entry on this page. I hope all my friends can see this page. At the time of me writing or typing this the music page is still yet to be done for this website. Or, idk. I dont know if I will add that page. You know what I am not going to just sit ariund and make empty promises! I will fullfill this request of my past self! I am going to go and make the page right now. Have fun on the website! :)</p>
-    <br></br>
-  <h1>June 12, 2023</h1>
-<p>Well Im done with the site, not I should make some movies to put on it. At 4:30 I am going to have my braces checked. I hope they just leave them as when they move the wires around it can really hurt. I'm going to go see 
-  who is on the gmod server Atomic. Goodbye for now!</p>
-  <br></br>
-  <h1>June 13, 2023</h1>
-  <img src="trooperxsteak.gif" alt="lots of cool thoughts!" width="300" height="415">
-  <p>Today has been fine, I am getting a pet rock. Just for fun something I can rant at. It even comes with a booklet on how to take care of it. I wonder if every image is just the same rock, that would be funny. It is
-    going to arrive in a couple of days. And tomorrow we are going to have steak to eat for dinner. I love steak!</p>
-  <br></br>
-<h1>June 14, 2023</h1>
-<p>Tonight we are having steak and god I hope this will be the best ever. And I am replaying a half-life mod called they hunger, it's good. I may make a video about it on my youtube channel.
-The pet rock will come on the upcoming Tuesday and today is Thursday. And Saturday or Sunday I forgot is fathers Day. My dad is a good dad! I should make a website dedicated to him.</p>
-<br></br>
-<h1>June 15, 2023</h1>
-<p>Ok sorry about that blog yesterday. It was Wednesday not Thursday. Sorry. And the steak was the best thing I have eaten since last steak night. The rock is coming on Tuesday still and I can't wait. I'm going to make a website for 
-  Father's Day.</p>
-    <br></br>
-<h1>June 19, 2023</h1>
-    <p>I have not been on the blog for a few days because I went to the grand canyon. I got some images ill put up here sometime, but not right now. Also, I put a new movie but it is not showing up, idk.</p>
-    <br></br>
-<h1>June 24, 2023 </h1>
-    <p>Damn it has been a long time since I posted here. I am just changing some of the grammar on this blog. I am thinking of doing a half-life mod business. Like it could cost 5 bucks for me to make a half-life mod.
-    Like a simple reskin, like ten maps, and instructions on installing and running it. That sounds good.</p>
-    <br></br>
-    <h1>June 25, 2023</h1>
-    <p>Today we went to the pool and boy was it fun! I'm going to get a bunch of my friends and tell them to make alt roblox accounts and wait some time so we can raid a furry server. In my opinion furries suck!</p>
-    <details>
-      <summary>Why I hate furries.</summary>
-      This is a long text about why I hate furries.
-      
-      Every furry that I have ment I hated, people at school and
-      another kid. Now the other kid I will call MR.Dumbass for this story.
-      I was at a sleep over with my friends and becuase MR.Dumbass is a friend of my friends he
-      comes over. So He brought along a little plushie from he likes. I take MR.Dumbass's toy and I hide it.
-      Then I tell him that I threw it away so he goes and checks and I pull it out and have a good chuckle.
-      Then I kid you not MR.Dumbass grabs be by the neck and chokes me. Im talking for a good 2 seconds 
-      I could not breath, this was the first time I got choked by someone. So my throat hurts for the rest of the night.
-      THE END.
-
-      Oh calm down I also have another thing to talk about. Every flippin furry I see on th internet is a Dumbass. They are just 
-      weird. Some can't even reason with life. They also suck.
-    </details>
-      <h6>Click the little arrow.</h6>
-    <br></br>
-    <h1>June 27, 2023</h1>
-    <p>I missed a could of days of the blog but thats fine, Im going to make a website for my sister and I am thinking of giving her my old pc. But there is no wher ein her room to put it.</p>
-    <br></br>
-    <h1>June 28, 2023</h1>
-    <p>Another day, im making another video and I will be adding somethings to the website service.</p>
-    <br></br>
-    <h1>July 1, 2023</h1>
-    <p>Im going to take a break from posting to work on my kool kid network site. Ill be back when school starts, soooooooooooooo bye!</p>
-<br></br>
-    <h1>July 4, 2023</h1>
-    <p>Ok ok, I know school has not started but its the fourth of July! God bless America. I made another site for school called Troopers Troops, its were me and my friends can do pranks for money, or make video game maps. You can go to it</p>
-<a href="https://koolcoder123.github.io/TheTroopers-site/">here.</a>
-<br></br>
-    <h1>July 5, 2023</h1>
-<p>Today I learned how to make Doom Wads, you can find it on the site that I made yesterday. Just a small map, my very first!</p>
-    <br></br>
-    <h1>July 7, 2023</h1>
-    <p>I have not made a youtube video in a little, I think ill do that today.</p>
-    <br></br>
-    <h1>July 10, 2023</h1>
-    <P>My DOOM wads blew up! So many comments and views! That was epic!</P>
-    <br></br>
-    <h1>July 15, 2023</h1>
-<p>I started taking pictures of things. I might even make a photos section, I'm working on it!</p>
-<br></br>
-<h1>July 16, 2023</h1>
-    <p>The picture page is almost done! And a news website I'm making is also almost done!</p>
-<br></br>
-    <h1>July 17, 2023</h1>
-    <p>The pictures page is done! Im going to add a gallery for my other pages. I got a LOT of pictures.</p>
-  <br></br>
-    <h1>July 22, 2023</h1>
-    <p>I had been grounded, thats the reason why I have not been here. TF2 got a new update! Hell yeah.</p>
-  <br></br>
-    <h1>July 27, 2023</h1>
-  <p>Three more days till school! Meet the teacher happened. The 7th grade teachers are nice. Soooo yeah!1!1!! Can't wait!</p>
+    <h1>Wait a little!</h1>
+  <p>This blog will begin on the upcoming labor day! If you think that site is not updating contect me at</p>
+  <address>jkstanw09@gmail.com</address>
   </center>
 </body>
 </html>
