--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
 <body style="background-color:#8FBC8F; font-family: verdana;">
 <title>Trooper's Blog.</title>
-  <a href="https://therealtrooper.github.io/Trooper-s-site/">This is the way to the homepage.</a>
+  <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Bye now!">This is the way to the homepage.</a>
   <center><h1>Welcome</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
     <h1>Wait a little!</h1>
