--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,9 @@
   <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Bye now!">This is the way to the homepage.</a>
   <center><h1>Welcome</h1>
 <img src="troopersblog.png" alt="lots of cool thoughts!" width="300" height="415">
-    <h1>Wait a little!</h1>
-  <p>This blog will begin on the upcoming labor day! If you think that site is not updating contect me at</p>
+    <h1>9/4/23</h1>
+  <p>Today was labor day! and the day that this blog starts! Today I'm just chilling around playing on my computer and my wii. Right now it is 8:55 P.M and I had cookies and cream ice cream for dessert which was good. Got
+  nothing that good to do that now. So thats why I am typing this right now!</p>
   <address>jkstanw09@gmail.com</address>
   </center>
 </body>
